--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ h1 {
     }
     
     .blue {
-      background-color: gray;
+      background-color: grey;
     }
     .pink{
     background-color: pink;
